# PDC_part1

./: .gitignore  CMakeLists.txt  MakeFile  README.md  main.cpp  notes.md  queue.hpp  tsp.cpp
mpi/: CMakeLists.txt  mainMPI.cpp  queue.hpp  tsp.cpp
openmp/: README.md  main.cpp  makefile  report.docx  tsp.cpp  tsp.h
openmpi/: CMakeLists.txt  main.cpp  makefile  tsp.cpp  tsp.h
serial/: CMakeLists.txt  main.cpp  queue.hpp  tsp.cpp
